<resources>
    <string name="app_name">Weather App</string>
    <string name="navigation_content_description">Navigation Up</string>
    <string name="current_weather">Current Weather</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="show_more">Show More</string>
    <string name="permission_denied">Permission Denied…</string>
    <string name="snack_bar_gps_turned_off">Your GPS is off please turn it on.</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error Occurred</string>
    <string name="error_status_code_unknown">Error Status code: Unknown</string>
    <string name="alert_title_permission_blocked">Permissions are blocked!</string>
    <string name="alert_message_permission_blocked"><![CDATA[Hello, you have permanently blocked your permissions please go into your Settings > Apps > Weather App > Permissions to enable them manually.]]></string>
    <string name="ok">OK</string>
    <string name="alert_title_gps">Warning!</string>
    <string name="alert_message_gps">Please enable GPS from settings.</string>
    <string name="alert_positive_btn_gps">Open GPS Settings</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="change_log_message">
    <![CDATA[
    </style>
    - Material Design<br/>
    - Search Over 40K Cities<br/>
    - Powerful & Fast<br/>
    - Auto Location<br/>
    <br>
    <b>If you find any bug please report to the developer.<b/>
    </html>
    ]]></string>
    <string name="city_cursor_string">%s |\u0020</string>
    <string name="country_cursor_string">%s</string>
    <string name="extra_cursor_string">\u0020(%s)</string>
    <string name="copyRightMessage">Copyrights © %1$d by Labinot Bajrami</string>
    <string name="versionNumber">Version %s</string>
    <string name="daily_forecast">Daily Forecast</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="help_anp_support"><![CDATA[Help & Support]]></string>
    <string name="settings">Settings</string>
    <string name="changelog">Changelog</string>
    <string name="about">About</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="default_city">Kichevo</string>
    <string name="main">Main</string>
    <string name="city">City</string>
    <string name="Sunrise">Sunrise: %s</string>
    <string name="Sunset">Sunset: %s</string>
    <string name="setFeelsLikeC">Feels Like: %.1f°C</string>
    <string name="setFeelsLikeF">Feels Like: %.1f°F</string>
    <string name="setKMH">%.1f m/s</string>
    <string name="setMPH">%.1f mph</string>
    <string name="setTimeDate">%s\nLast check: %s</string>
    <string name="setForecastTime">%s\n%s</string>
    <string name="setTempC">%.1f°C</string>
    <string name="setTempF">%.1f°F</string>
    <string name="transition_card_icon">detail_icon_transition</string>
    <string name="transition_temp">detail_temp_transition</string>
    <string name="transition_feels_like">detail_feels_like_transition</string>
    <string name="setLastCheck">Last check: %s</string>
    <string name="setHUMIDITY">Humidity: %1d %%</string>
    <string name="setPRESSURE">Pressure: %.1f hPa</string>
    <string name="setKMH_SPEED">WindL: %.1f m/s</string>
    <string name="setMPH_SPEED">WindL: %.1f mph</string>
    <string name="setCity_Country">%s,%s</string>
    <string name="setHUM">%1d %%</string>
    <string name="setPRE">%.1f hPa</string>
    <string name="help_uri">mailto:labinotmilan7@gmail.com?subject=I need help with your Weather app!</string>
    <string name="change_log_title">New in %s</string>
    <string name="seven_days_weather">7 Days Forecast</string>
    <string name="hourly_weather">Hourly Weather</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="loading">Loading…</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="country">Country</string>
    <string name="units">Units</string>
    <string name="kmh">m/s, °C</string>
    <string name="mph">mph, °F</string>
    <string name="days">Days Shown</string>
    <string name="double_bak_exit">Exit app only on double back</string>
    <string name="double_back_title">Double Back</string>
    <string name="theme">Theme</string>
    <string name="greentheme">Green Theme</string>
    <string name="bluetheme">Blue Theme</string>
    <string name="darktheme">Dark Theme</string>
    <string name="redtheme">Red Theme</string>
    <string name="purpletheme">Purple Theme</string>
    <string name="chose_theme">Chose your Theme</string>
    <string name="app">App</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="kAF" translatable="false">AF</string>
    <string name="kAL" translatable="false">AL</string>
    <string name="kDZ" translatable="false">DZ</string>
    <string name="kAS" translatable="false">AS</string>
    <string name="kAD" translatable="false">AD</string>
    <string name="kAO" translatable="false">AO</string>
    <string name="kAI" translatable="false">AI</string>
    <string name="kAQ" translatable="false">AQ</string>
    <string name="kAG" translatable="false">AG</string>
    <string name="kAR" translatable="false">AR</string>
    <string name="kAM" translatable="false">AM</string>
    <string name="kAW" translatable="false">AW</string>
    <string name="kAU" translatable="false">AU</string>
    <string name="kAT" translatable="false">AT</string>
    <string name="kAZ" translatable="false">AZ</string>
    <string name="kBS" translatable="false">BS</string>
    <string name="kBH" translatable="false">BH</string>
    <string name="kBD" translatable="false">BD</string>
    <string name="kBB" translatable="false">BB</string>
    <string name="kBY" translatable="false">BY</string>
    <string name="kBE" translatable="false">BE</string>
    <string name="kBZ" translatable="false">BZ</string>
    <string name="kBJ" translatable="false">BJ</string>
    <string name="kBM" translatable="false">BM</string>
    <string name="kBT" translatable="false">BT</string>
    <string name="kBO" translatable="false">BO</string>
    <string name="kBA" translatable="false">BA</string>
    <string name="kBW" translatable="false">BW</string>
    <string name="kBR" translatable="false">BR</string>
    <string name="kIO" translatable="false">IO</string>
    <string name="kVG" translatable="false">VG</string>
    <string name="kBN" translatable="false">BN</string>
    <string name="kBG" translatable="false">BG</string>
    <string name="kBF" translatable="false">BF</string>
    <string name="kBI" translatable="false">BI</string>
    <string name="kKH" translatable="false">KH</string>
    <string name="kCM" translatable="false">CM</string>
    <string name="kCA" translatable="false">CA</string>
    <string name="kCV" translatable="false">CV</string>
    <string name="kKY" translatable="false">KY</string>
    <string name="kCF" translatable="false">CF</string>
    <string name="kTD" translatable="false">TD</string>
    <string name="kCL" translatable="false">CL</string>
    <string name="kCN" translatable="false">CN</string>
    <string name="kCX" translatable="false">CX</string>
    <string name="kCC" translatable="false">CC</string>
    <string name="kCO" translatable="false">CO</string>
    <string name="kKM" translatable="false">KM</string>
    <string name="kCK" translatable="false">CK</string>
    <string name="kCR" translatable="false">CR</string>
    <string name="kHR" translatable="false">HR</string>
    <string name="kCU" translatable="false">CU</string>
    <string name="kCW" translatable="false">CW</string>
    <string name="kCY" translatable="false">CY</string>
    <string name="kCZ" translatable="false">CZ</string>
    <string name="kCD" translatable="false">CD</string>
    <string name="kDK" translatable="false">DK</string>
    <string name="kDJ" translatable="false">DJ</string>
    <string name="kDM" translatable="false">DM</string>
    <string name="kDO" translatable="false">DO</string>
    <string name="kTL" translatable="false">TL</string>
    <string name="kEC" translatable="false">EC</string>
    <string name="kEG" translatable="false">EG</string>
    <string name="kSV" translatable="false">SV</string>
    <string name="kGQ" translatable="false">GQ</string>
    <string name="kER" translatable="false">ER</string>
    <string name="kEE" translatable="false">EE</string>
    <string name="kET" translatable="false">ET</string>
    <string name="kFK" translatable="false">FK</string>
    <string name="kFO" translatable="false">FO</string>
    <string name="kFJ" translatable="false">FJ</string>
    <string name="kFI" translatable="false">FI</string>
    <string name="kFR" translatable="false">FR</string>
    <string name="kPF" translatable="false">PF</string>
    <string name="kGA" translatable="false">GA</string>
    <string name="kGM" translatable="false">GM</string>
    <string name="kGE" translatable="false">GE</string>
    <string name="kDE" translatable="false">DE</string>
    <string name="kGH" translatable="false">GH</string>
    <string name="kGI" translatable="false">GI</string>
    <string name="kGR" translatable="false">GR</string>
    <string name="kGL" translatable="false">GL</string>
    <string name="kGD" translatable="false">GD</string>
    <string name="kGU" translatable="false">GU</string>
    <string name="kGT" translatable="false">GT</string>
    <string name="kGG" translatable="false">GG</string>
    <string name="kGN" translatable="false">GN</string>
    <string name="kGW" translatable="false">GW</string>
    <string name="kGY" translatable="false">GY</string>
    <string name="kHT" translatable="false">HT</string>
    <string name="kHN" translatable="false">HN</string>
    <string name="kHK" translatable="false">HK</string>
    <string name="kHU" translatable="false">HU</string>
    <string name="kIS" translatable="false">IS</string>
    <string name="kIN" translatable="false">IN</string>
    <string name="kID" translatable="false">ID</string>
    <string name="kIR" translatable="false">IR</string>
    <string name="kIQ" translatable="false">IQ</string>
    <string name="kIE" translatable="false">IE</string>
    <string name="kIM" translatable="false">IM</string>
    <string name="kIL" translatable="false">IL</string>
    <string name="kIT" translatable="false">IT</string>
    <string name="kCI" translatable="false">CI</string>
    <string name="kJM" translatable="false">JM</string>
    <string name="kJP" translatable="false">JP</string>
    <string name="kJE" translatable="false">JE</string>
    <string name="kJO" translatable="false">JO</string>
    <string name="kKZ" translatable="false">KZ</string>
    <string name="kKE" translatable="false">KE</string>
    <string name="kKI" translatable="false">KI</string>
    <string name="kKW" translatable="false">KW</string>
    <string name="kKG" translatable="false">KG</string>
    <string name="kLA" translatable="false">LA</string>
    <string name="kLV" translatable="false">LV</string>
    <string name="kLB" translatable="false">LB</string>
    <string name="kLS" translatable="false">LS</string>
</resources>