<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/widget_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.Weather_App.AppWidgetContainer"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/widget_margin">

            <TextView
                android:id="@+id/current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextClock
                android:id="@+id/current_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:format24Hour="dd-MMM-yyyy"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="26-Feb-2021" />

            <TextClock
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:format24Hour="HH:mm"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="50sp"
                tools:text="18:13" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/humidity" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/pressure" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/todayStat_ImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_clear_sky_day" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="21°C" />

            <TextView
                android:id="@+id/feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="Feels like: 20°C" />

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Description" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="1dp"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wind"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center"
                android:padding="@dimen/widget_margin"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/wind_speed" />

            <TextView
                android:id="@+id/last_checked"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center"
                android:padding="@dimen/widget_margin"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="@string/setLastCheck" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom">

                <ImageView
                    android:id="@+id/refresh_button"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="bottom"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_baseline_refresh"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/refresh_button_progress"
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    android:indeterminateTintMode="src_in"
                    android:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>